// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Queries when fetching a tag by ID when there is a tag with the given ID should return the expected result 1`] = `
{
  "actions": [],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "label": "plants",
  "members": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "type": "term",
    },
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "type": "vocabularyList",
    },
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
      "type": "spatialFeature",
    },
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
      "type": "note",
    },
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
      "type": "note",
    },
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
      "type": "note",
    },
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "type": "digitalText",
    },
  ],
  "name": {
    "items": [
      {
        "languageCode": "en",
        "role": "original",
        "text": "plants",
      },
    ],
  },
}
`;

exports[`Tag Queries when fetching all tags should return the expected result 1`] = `
{
  "entities": [
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "label": "plants",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "vocabularyList",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "digitalText",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "plants",
          },
        ],
      },
    },
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "label": "animals",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "bibliographicCitation",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
          "type": "video",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "type": "digitalText",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "animals",
          },
        ],
      },
    },
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
      "label": "placenames",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
          "type": "photograph",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
          "type": "audioItem",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112003",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "type": "note",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "placenames",
          },
        ],
      },
    },
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110004",
      "label": "songs",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "photograph",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112002",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
          "type": "note",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "songs",
          },
        ],
      },
    },
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
      "label": "legends",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "type": "vocabularyList",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "mediaItem",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "song",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "legends",
          },
        ],
      },
    },
    {
      "actions": [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110006",
      "label": "law",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
          "type": "bibliographicCitation",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
          "type": "playlist",
        },
      ],
      "name": {
        "items": [
          {
            "languageCode": "en",
            "role": "original",
            "text": "law",
          },
        ],
      },
    },
  ],
  "indexScopedActions": [],
}
`;
